<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomUtilisateur"
        android:textSize="30sp"
        android:layout_gravity="center"/>
    <EditText
        android:inputType="text"
        android:autofillHints="name"
        android:id="@+id/editNomUtilisateur"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mdp"
        android:textSize="30sp"
        android:layout_gravity="center"/>
    <EditText
        android:autofillHints="password"
        android:id="@+id/editMotDePasse0"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmerMdp"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <EditText
        android:autofillHints="password"
        android:id="@+id/editMotDePasse1"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/btnInscription1"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Inscrire"
        android:textSize="11sp"
        android:textColor="#fff" />

</LinearLayout>