<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:paddingTop="80dp"
                    android:text="@string/nomUtilisateur"
                    android:textAlignment="center"
                    android:textSize="30sp" />
                <EditText
                    android:id="@+id/NomUtilisateur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="name"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/Mdp"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/mdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConnexion"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/Connexion"
                    android:textColor="#fff"
                    android:textSize="11sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnInscription"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/Inscription"
                    android:textColor="#fff"
                    android:textSize="11sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>