<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/NomTache"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtNomTache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp" />

            <ProgressBar
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_height="wrap_content"/> />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/Date"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtDateLimite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp" />

            <FrameLayout
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/id"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtID"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_circular"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="0"
                    android:min="0"
                    android:progressDrawable="@drawable/circle"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/textePourcentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seekBar3"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="90dp"
                    android:max="100"
                    android:min="0"
                    android:rotation="270"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Jours"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtJours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progress_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="false" />

            <Button
                android:id="@+id/btnMettreAJour"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/MettreJour"
                android:textColor="#fff"
                android:textSize="11sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>